# tyde

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: artist.rs  mod.rs
src/config/: data.rs  library.rs  mod.rs
src/db/: artists.rs  library.rs  mod.rs
src/db/migrations/: 001_create_artists.sql  002_create_artist_names.sql  003_add_normalization_to_artist_names.sql  004_set_normalized_column_to_not_null.sql  005_rename_locale_to_lang.sql  mod.rs
src/db/models/: artists.rs
src/db/types/: datetime_stamp.rs  mod.rs
src/logging/: mod.rs
src/utils/: console.rs  mod.rs  verbose.rs
tests/: artist_integration.rs
