[package]
name = "tyde"
description = "Manage your music"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
log = "0.4.31"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-rolling-file = { version = "0.1.3", features = ["non-blocking"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
