[package]
name = "tyde"
description = "Manage your music"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
inquire = "0.9.4"
isolang = { version = "2.4.0", features = ["serde"] }
log = "0.4.31"
owo-colors = "4.3.0"
rusqlite = { version = "0.40.0", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
tabled = "0.21.0"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-rolling-file = { version = "0.1.3", features = ["non-blocking"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
